create: cteate header section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,7 @@
 @import './base/module.scss';
 @import './utils/module.scss';
+@import './layout/module.scss';
+
+h1 {
+    font-family: 'Montserrat-SemiBold', sans-serif;
+}
