--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,168 @@
+/* Reset and base styles  */
+* {
+  padding: 0px;
+  margin: 0px;
+  border: none;
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Links */
+a,
+a:link,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+/* Common */
+aside,
+nav,
+footer,
+header,
+section,
+main {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+ul,
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+img,
+svg {
+  max-width: 100%;
+  height: auto;
+}
+
+address {
+  font-style: normal;
+}
+
+/* Form */
+input,
+textarea,
+button,
+select {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: transparent;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button,
+input[type=submit] {
+  display: inline-block;
+  box-shadow: none;
+  background-color: transparent;
+  background: none;
+  cursor: pointer;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+label {
+  cursor: pointer;
+}
+
+legend {
+  display: block;
+}
+
+input[type=file] {
+  max-width: 100%;
+}
+
+@font-face {
+  font-family: "Montserrat-light", sans-serif;
+  src: url(../../fonts/Montserrat-Light.woff2) format("woff2");
+  font-weight: 300;
+}
+@font-face {
+  font-family: "Montserrat-Regular", sans-serif;
+  src: url(../../fonts/Montserrat-Regular.woff2) format("woff2");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Montserrat-SemiBold", sans-serif;
+  src: url(../../fonts/Montserrat-SemiBold.woff2) format("woff2");
+  font-weight: 600;
+}
+body {
+  width: 100%;
+  height: 100vh;
+}
+
+.container {
+  max-width: 1160px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: #f0f0f0;
+}
+.header__inner {
+  padding: 16px 19px 6px 19px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo__img {
+  width: 134px;
+  height: 69px;
+}
+
+.navigation__list {
+  display: flex;
+  gap: 64px;
+}
+.navigation__link {
+  font-family: "Montserrat-SemiBold", sans-serif;
+  font-size: 18px;
+  color: #000;
+}
+
+h1 {
+  font-family: "Montserrat-SemiBold", sans-serif;
+}
 
 /*# sourceMappingURL=style.css.map */
